NewSocketOutputStream is a test class, if test ok then change SocketOutputStream